--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngneat/hot-toast": "^4.0.0",
     "@ngneat/overview": "^3.0.0",
     "@ngneat/until-destroy": "^9.0.0",
+    "angular-in-memory-web-api": "^0.14.0",
     "firebase": "^9.4.0",
     "rxfire": "^6.0.0",
     "rxjs": "~7.4.0",
