--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.1.1",
     "@angular/platform-browser-dynamic": "^14.1.1",
     "@angular/router": "^14.1.1",
+    "@firebase/firestore": "^4.4.0",
     "@ngneat/hot-toast": "^4.0.0",
     "@ngneat/overview": "^3.0.0",
     "@ngneat/until-destroy": "^9.0.0",
